log/build_2025-10-07_15-47-32/hik_camera_driver/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.15 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.8 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.2")  
-- Found FastRTPS: /opt/ros/humble/include  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found sensor_msgs: 4.9.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found OpenCV: /usr/local (found version "4.13.0") 
-- MVS SDK directory: /opt/MVS
-- MVS library directory: /opt/MVS/lib/64
-- Linking MVS SDK libraries
-- Found ament_lint_auto: 0.12.14 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/fin/Code/RoboMaster/Task4/hik_camera_driver/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the docstring style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/fin/Code/RoboMaster/Task4/build/hik_camera_driver
[ 14%] Building CXX object CMakeFiles/param_info_node.dir/src/param_info_node.cpp.o
[ 28%] Building CXX object CMakeFiles/hik_camera_node.dir/src/hik_camera_node.cpp.o
[ 57%] Building CXX object CMakeFiles/hik_camera_node.dir/src/mvs_sdk_wrapper.cpp.o
[ 57%] Building CXX object CMakeFiles/fps_monitor_node.dir/src/fps_monitor_node.cpp.o
/home/fin/Code/RoboMaster/Task4/hik_camera_driver/src/hik_camera_node.cpp: In member function ‘void hik_camera_driver::HikCameraDriver::cameraCaptureThread()’:
/home/fin/Code/RoboMaster/Task4/hik_camera_driver/src/hik_camera_node.cpp:241:31: error: ‘MV_CC_PIXEL_CONVERT_PARAM’ {aka ‘struct _MV_CC_PIXEL_CONVERT_PARAM_’} has no member named ‘pDstBuf’; did you mean ‘pDstBuffer’?
  241 |                             c.pDstBuf = dst.data();
      |                               ^~~~~~~
      |                               pDstBuffer
/home/fin/Code/RoboMaster/Task4/hik_camera_driver/src/hik_camera_node.cpp:242:31: error: ‘MV_CC_PIXEL_CONVERT_PARAM’ {aka ‘struct _MV_CC_PIXEL_CONVERT_PARAM_’} has no member named ‘nDstBufSize’; did you mean ‘nDstBufferSize’?
  242 |                             c.nDstBufSize = static_cast<unsigned int>(dst.size());
      |                               ^~~~~~~~~~~
      |                               nDstBufferSize
gmake[2]: *** [CMakeFiles/hik_camera_node.dir/build.make:76：CMakeFiles/hik_camera_node.dir/src/hik_camera_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:141：CMakeFiles/hik_camera_node.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
[ 71%] Linking CXX executable param_info_node
[ 71%] Built target param_info_node
[ 85%] Linking CXX executable fps_monitor_node
[ 85%] Built target fps_monitor_node
gmake: *** [Makefile:146：all] 错误 2
